Adding explanatory title to the tag link
Updated description wording

--- a/changelog.html
+++ b/changelog.html
@@ -10,7 +10,7 @@ pagination:
 permalink: "changelog/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber | plus: 1 }}/{% endif %}index.html"
 eleventyExcludeFromCollections: true
 eleventyComputed:
-  description: "{{ description }}<br />You can also view the full list of changes on <a href='{{ pkg.releases.url }}' class='text-convrtr'>Github</a>"
+  description: "{{ description }}<br />You can also view the full list of releases on <a href='{{ pkg.releases.url }}' class='text-convrtr'>Github</a>"
 ---
 <section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
