--- a/tag.html
+++ b/tag.html
@@ -8,7 +8,7 @@ pagination:
   filter: labels.labels
 permalink: '/changelog/tag/{{ tag }}/'
 eleventyComputed:
-  description: "{{ description }}<br />You can also view the full list of changes on <a href='{{ pkg.releases.url }}' class='text-convrtr'>Github</a>"
+  description: "{{ description }}<br />You can also view the full list of releases on <a href='{{ pkg.releases.url }}' class='text-convrtr'>Github</a>"
 ---
 
 <section id="{{ filename }}" class="section">
