Link to tags page from Changelog
And link back to changelog from tags description

--- a/tags.html
+++ b/tags.html
@@ -7,6 +7,8 @@ pagination:
   data: labels.labels
   size: 50
 permalink: '/tags/'
+eleventyComputed: 
+  description: "{{ description }}<br />See the <a href='{{ '/changelog' | url }}'' class='text-convrtr'>Changelog</a> for the full list of releases"
 ---
 <section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
