--- a/changelog.html
+++ b/changelog.html
@@ -71,6 +71,10 @@ eleventyComputed:
             </table>
         </div>
 
+        <p>
+            <a href="{{ '/tags' | url }}" class="text-convrtr">See the full list of tags</a>
+        </p>
+
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <!-- Previous Link -->
