Fix missing description line in filtered tag list

--- a/tag.html
+++ b/tag.html
@@ -1,6 +1,7 @@
 ---
 title: Changelog
 layout: layout.liquid
+description: History of feature releases, changes and bug fixes. Click on an item to see the full changelog details.
 pagination:
   data: collections
   size: 1
