Added a true/false "visible" flag to all tags
This will prevent them from appearing in the tags list (though they'll still be accessible directly, and if they are added to a changelog). Some tags are really for Github only, but want to sync them here and keep them in case they're ever needed

--- a/tags.html
+++ b/tags.html
@@ -23,7 +23,8 @@ eleventyComputed:
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
-                {%- for tag in labels.labels -%}
+                {% assign visible_labels = labels.labels | where: "visible", true %}
+                {%- for tag in visible_labels -%}
                     {%- assign tagKey = tag.key | downcase | strip -%}
                     {%- assign tagCount = 0 -%}
 
