Layout adjustments for footer and 404
Making the footer work a little better by moving it inside the main content element, that way we don't have to deal with overflows.
Updated wrapper classes for 404 and removed most for other pages as they're no longer necessary
Minor improvement to the 404 message text

Changing line endings on a bunch of changelog files because 11ty or git or VScode decided that was a cool thing they wanted to do...

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
             <div class="row justify-content-center">
                 <div class="col-md-12 text-center">
                     <h1 class="display-1 d-block">{{ page.fileSlug }}</h1>
-                    <div class="mb-4 lead">The page you are looking for was not found.</div>
+                    <div class="mb-4 lead">The page you are looking for could not be found.</div>
                     <a href="{{ '/' | url }}" class="btn btn-link text-convrtr">Back to Home</a>
                 </div>
             </div>
