Added sitemap and changelog to sidebar
Added additional padding to the bottom of sidebar
Included masonary script to neaten up Sitemap page
 - do want to look into a CSS grid way of doing this, if possible

--- a/sitemap.html
+++ b/sitemap.html
@@ -8,9 +8,9 @@ page-id: sitemap
 <section id="sitemap" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <div class="grid grid-g3">
+            <div class="row" style="--bs-gutter-y:1.5rem;" data-masonry='{"percentPosition": true }'>
                 {% for nav-item in nav %}
-                <div class="g-col-12 g-col-md-6 g-col-lg-4 g-col-hd-3 g-col-hd-3 g-col-fhd-3">
+                <div class="col-12 col-md-6 col-lg-4 col-hd-3 col-hd-3 col-fhd-3">
                     <div class="card">
                         <div class="card-header">
                             <h2 class="card-title h5 mb-0 mt-2">
