Enhancing site structure
Created the ability to link directly to invidual tools, while retaining the landing page that contains them all.

WIP
 - still need to update the links in the sidebar
 - sitemap needs to be updated
 - relevant page specific scripts need to be added to pages.liquid
 - update tools to be auto expanded on their own dedicated page
 - figure out why javascript is busted for all tools
 - clean up old files

--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,7 @@ eleventyExcludeFromCollections: true
 eleventyComputed:
   description: "{{ description }}<br />You can also view the full list of releases on <a href='{{ pkg.releases.url }}' class='text-convrtr'>Github</a>"
 ---
+{% assign filename = page.fileSlug %}
 <section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
