Added table caption to tags

--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,9 @@ eleventyComputed:
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <table class="table table-hover version-list">
+                <caption class="visually-hidden">
+                    Changelog tags table: shows how each version is labeled, linked, and described — because chaos deserves categories
+                </caption>
                 <thead class="d-none d-md-table-header-group">
                     <tr>
                         <th scope="col">Tag</th>
