--- a/sitemap.html
+++ b/sitemap.html
@@ -11,6 +11,7 @@ eleventyExcludeFromCollections: true
         <div class="section-heading mb-4">
             <div class="row" style="--bs-gutter-y:1.5rem;" data-masonry='{"percentPosition": true }'>
                 {% for nav-item in nav %}
+                {% if nav-item.exclude-from-sitemap == false %}
                 <div class="col-12 col-md-6 col-lg-4 col-hd-3 col-hd-3 col-fhd-3">
                     <div class="card">
                         <div class="card-header">
@@ -29,6 +30,7 @@ eleventyExcludeFromCollections: true
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
