--- a/tag.html
+++ b/tag.html
@@ -16,6 +16,9 @@ eleventyComputed:
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <table class="table table-hover version-list">
+                <caption class="visually-hidden">
+                    Site changelogs for the "{{ tag }}" tag: all the glorious chaos we’ve shipped — version history, release dates, and tags
+                </caption>
                 <thead class="d-none d-md-table-header-group">
                     <tr>
                         <th scope="col">Version</th>
