Updated search description

--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 ---
 title: Search
 layout: layout.liquid
-description: "Look for stuff."
+description: "Quickly search and filter through the available decoding tools, and resources"
 page-id: search
 permalink: /search/
 eleventyExcludeFromCollections: true
