Fix extra quote on search page <section>

--- a/search.html
+++ b/search.html
@@ -7,6 +7,6 @@ permalink: /search/
 eleventyExcludeFromCollections: true
 ---
 {% assign filename = page.fileSlug %}
-<section id="{{ filename }}" class="section py-4 px-2 px-sm-4"">
+<section id="{{ filename }}" class="section py-4 px-2 px-sm-4">
     <div id="search" class="col-md-12 text-center search"></div>
 </section>
