--- a/search.html
+++ b/search.html
@@ -8,5 +8,5 @@ eleventyExcludeFromCollections: true
 ---
 {% assign filename = page.fileSlug %}
 <section id="{{ filename }}" class="section py-4 px-2 px-sm-4">
-    <div id="search" class="col-md-12 text-center search"></div>
+    <div id="page-search" class="col-md-12 text-center search"></div>
 </section>
